crates/aranya-policy-lang/tests/data/command_without_seal_block.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
3 |     policy {
  |     ^ expected seal_block
